--- a/tab2_ds_solarcapacity_county.Rmd
+++ b/tab2_ds_solarcapacity_county.Rmd
@@ -5,6 +5,7 @@ date: "3/2/2020"
 output: html_document
 ---
 
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
@@ -20,6 +21,7 @@ library(tidyverse)
 library(lubridate)
 library(janitor)
 library(here)
+library(plotly)
 
 ```
 
@@ -58,6 +60,82 @@ tidy_plant_info <- plant_info %>%
 
 plants_location_join <- inner_join(tidy_plant_info, tidy_gen_by_plant, "cec_plant_id")
 # note that there are a 19 entries wiht energy_source_category not equal to "SUN" but prime_mover_id equal to "PV"
+
+```
+
+Refine df for line graph of solar capacity
+
+```{r}
+
+solar_capacity_df <- plants_location_join %>% 
+  select(-resource_id, -resource_id_name) %>%
+  filter(status == "OP") %>% 
+  filter(county == "San Bernardino") %>% 
+  group_by(year, plant_name) %>% 
+  summarize(total_capacity = (sum(capacity))) # %>%
+  # mutate(plant_name = fct_reorder(plant_name, desc(total_capacity)))
+
+```
+
+Graph solar capacity overtime
+
+```{r}
+
+ # solar_capacity <- reactive({
+ #    solar_capacity_df %>%
+ #      # %in% is basically an OR statement. look for anything in **county_selection** widget and filter county column based on that
+ #      filter(county %in% input$county_selection)
+ #  })
+ # 
+ #  output$solar_plot_overtime <- renderPlot({
+
+# remember to add () after df since reactive
+solar_capacity_plot <- ggplot(data = solar_capacity_df,
+                                  aes(x = year,
+                                      y = total_capacity,
+                                      group = plant_name)) +
+  geom_col(color = alpha("black",.1), fill = "orange", alpha = 1, show.legend = FALSE) +
+  labs(title = "Solar capacity (2008-2018)",
+       # add to title **reactive text** "in selected county name" 
+       x = "Year",
+       y = "Cumulative capacity installed (kW)") +
+  scale_y_continuous(expand = c(0,0)) +
+  scale_x_continuous(lim = c(2008,2019), expand = c(0,0), breaks = seq(2008, 2018, 2)) +
+  theme_classic()
+
+ggplotly(solar_capacity_plot)
+  
+  #})
+
+# To dos:
+# Figure out how to arrange yearly capacity by the capacity of plant_name
+# Fix plotly hover text issue
+# For whatever reason, names of plants are ordered in alphabetical order
+# Adjust plotly hover text to look nicer
+
+```
+
+Dataframes for side panel text graphics:
+
+```{r}
+# -------------
+# % of total California solar capacity
+# -------------
+
+```
+
+
+```{r}
+# ---------
+# median system size
+# --------
+
+```
+
+```{r}
+# ------------
+# number  of homes powered
+# -------------
 
 ```
 
