--- a/julia_tab2_attempt.Rmd
+++ b/julia_tab2_attempt.Rmd
@@ -13,7 +13,7 @@ Join energy generation plant info with locational plant info. Filtered for Solar
 
 ```{r}
 # ----------
-# Install ibraries
+# Attach packages
 # ---------
 
 library(tidyverse)
@@ -83,15 +83,21 @@ ca_counties <- read_sf(dsn = here::here("data", "ca_counties"),
 
 # Get number of plants per county from plants_location_join
 
-plants_per_county <- plants_location_join %>% 
-  group_by(county) %>% 
-  tally()
+# plants_per_county <- plants_location_join %>% 
+#   group_by(county) %>% 
+#   tally()
 # tally counts number of plants in each county
 
-# Join plant information to CA counties and make sf object with sticky geometries
-plant_county_join <- full_join(plants_per_county, ca_counties, "county")
-plant_county_sf <- st_as_sf(plant_county_join)
+# Get plant capacity by county and year
 
+plant_capacity <- plants_location_join %>% 
+  filter(status == "OP") %>% 
+  group_by(county, year) %>% 
+  summarize(tot_capacity = sum(capacity))
+
+# Join capacity information to CA counties and make sf object with sticky geometries
+ cap_county_join <- full_join(plant_capacity, ca_counties, "county")
+ cap_county_sf <- st_as_sf(cap_county_join)
 
 ```
 
@@ -132,10 +138,14 @@ plant_county_sf <- st_as_sf(plant_county_join)
 # temp_plot and placeholder
 # Could try to do this using solar capacity in MW per county??
 ggplot() +
-  geom_sf(data = plant_county_sf, 
-          aes(fill = n), 
+  geom_sf(data = cap_county_sf, 
+          aes(fill = tot_capacity), 
           size = 0.2, 
           color = "white") +
-  scale_fill_continuous(low = "yellow", high = "red")
+  scale_fill_continuous(low = "yellow", high = "red") +
+  theme_minimal() +
+  labs(x = "Latitude", 
+       y = "Longitude",
+       fill = "Total Capacity")
 ```
 
