Got the map tab done!

--- a/julia_tab2_attempt.Rmd
+++ b/julia_tab2_attempt.Rmd
@@ -146,6 +146,7 @@ ggplot() +
   theme_minimal() +
   labs(x = "Latitude", 
        y = "Longitude",
-       fill = "Total Capacity")
+       fill = "Total Capacity")+
+  facet_wrap(~year)
 ```
 
