small edit to tab3 rmd

--- a/tab3_ds_solarcapacity_county.Rmd
+++ b/tab3_ds_solarcapacity_county.Rmd
@@ -14,7 +14,7 @@ Join energy generation plant info with locational plant info. Filtered for Solar
 
 ```{r}
 # ----------
-# Install ibraries
+# Install libraries
 # ---------
 
 library(tidyverse)
