--- a/julia_tab4.Rmd
+++ b/julia_tab4.Rmd
@@ -75,7 +75,9 @@ annual_generation_state = annual_generation_state[-1, ]
 # Make tidy dataframe with generation by state, resource and year
 
 tidy_gen_state <- annual_generation_state %>% 
-  clean_names()
+  clean_names() %>% 
+  mutate(state = str_replace(state, "US-Total", "United States")) %>%
+  mutate(state = str_replace(state, "US-TOTAL", "United States"))
 
 # Get total mwh generation of solar and total for each state in 2018
 solar_by_state <- tidy_gen_state %>% 
@@ -93,12 +95,12 @@ solar_frac_state <- solar_by_state %>%
   mutate(solar = 
            replace_na(solar_thermal_and_photovoltaic, 0)) %>% 
   mutate(solar_frac = (solar / total)) %>%
-  mutate(year = as.numeric(year)) 
+  mutate(year = as.numeric(year)) %>% 
+  filter(year %in% c(2008:2018))
 
 solar_top_10 <- solar_frac_state %>% 
   filter(year == 2018) %>% 
-  arrange(-solar_frac) %>% 
-  head(10)
+  filter(state %in% c("CA", "NV", "UT", "VT", "AZ", "NC", "NM", "MA", "ID", "CO", "United States"))
 
 # put back into longer format for ggplot
 # total_out_of_solar_longer <- total_out_of_solar_state %>% 
